# sumbi-analytics

./: .bash_history  .env  .gitconfig  .gitignore  .replit  .wget-hsts  add_news.py  add_signal.py  add_v3_ui.py  add_v3_ui2.py  app.py  auto_push.sh  card.html  check_data_funcs.sh  check_error.sh  check_macro.py  check_macro_en.py  clean_korean.py  clean_master.py  cleanup_master.py  connect_v3.py  credit_flow.py  daily_flow.py  dart_connector.py  deploy_safe.py  diag2.py  diag2.py,  diag_krx.py,  dl_flow2.py  final_macro_fix.py  find_real_path.sh  fix.py  fix_bdi_final.py  fix_cache.py  fix_final.py  fix_final_en.py  fix_final_ui_time.py  fix_final_zero.py  fix_flow.py  fix_html_render.py  (+103 more)
.cache/py-yfinance/: cookies.db  tkr-tz.db
.github/workflows/: deploy.yml
.ssh/: authorized_keys
.streamlit/: machine_id_v4  secrets.toml
artifacts/stock-dashboard/: app.py  main.py  requirements.txt
artifacts/stock-dashboard/.replit-artifact/: artifact.edit.toml  artifact.toml
artifacts/stock-dashboard/.streamlit/: config.toml
kis_stock_data/: 000020.csv  000040.csv  000050.csv  000070.csv  000080.csv  000087.csv  000100.csv  000105.csv  000120.csv  000140.csv  000145.csv  000150.csv  000155.csv  000157.csv  000180.csv  0001A0.csv  000210.csv  000215.csv  000220.csv  000225.csv  000227.csv  000230.csv  000240.csv  000250.csv  000270.csv  000300.csv  000320.csv  000325.csv  000370.csv  000390.csv  000400.csv  000430.csv  000440.csv  000480.csv  000490.csv  0004V0.csv  0004Y0.csv  000500.csv  000520.csv  000540.csv  (+2836 more)
(+2 files in other folders)
